--- a/public/slunch-web/src/app/poll/poll.component.html
+++ b/public/slunch-web/src/app/poll/poll.component.html
@@ -5,7 +5,7 @@
 
     <div fxLayout="row wrap">
       <div style="margin:10px" *ngFor="let option of pollService.latestPoll?.options">
-        <app-poll-option class="clickable" (click)="updateVote(option)" [pollOption]="option"></app-poll-option>
+        <app-poll-option class="clickable" (click)="updateVote(option)" [matTooltip]="option?.name" [pollOption]="option"></app-poll-option>
       </div>
     </div>
 
