Use storage, only positive account deposit

--- a/public/slunch-web/src/app/account/account.component.html
+++ b/public/slunch-web/src/app/account/account.component.html
@@ -21,7 +21,7 @@
               </mat-form-field>
             </td>
             <td style="padding:5px">
-              <button mat-raised-button color="warn" (click)="addMoney()">Confirm</button>
+              <button [disabled]="!(addAmount > 0)" mat-raised-button color="warn" (click)="addMoney()">Confirm</button>
             </td>
           </tr>
         </table>
