--- a/public/slunch-web/src/app/admin/admin.component.html
+++ b/public/slunch-web/src/app/admin/admin.component.html
@@ -7,6 +7,16 @@
             <mat-panel-title>Unprocessed Transactions</mat-panel-title>
         </mat-expansion-panel-header>
 
+        <ag-grid-angular
+        style="height: 300px;"
+        class="ag-theme-balham"
+        [columnDefs]="transactionService.unprocessedColumnDefs"
+        [enableSorting]="true"
+        (gridReady)="transactionService.unprocessedOnGridReady($event)"
+        [gridOptions]="transactionService.unprocessedGridOptions"
+        [enableFilter]="true">
+        </ag-grid-angular>
+
         <mat-table [dataSource]="transactionService.unprocessedTransactionsDS">
             <ng-container matColumnDef="time">
                 <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
