--- a/public/slunch-web/src/app/gridElements/grid-control-status/grid-control-status.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-control-status/grid-control-status.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="center center" style="width:100%; height: 100%;">
+<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px" style="width:100%; height: 100%;">
   <button mat-raised-button style="background-color:cornflowerblue; color:white;" (click)="acknowledgeTransaction(t)">
     Ack
   </button>
