--- a/public/slunch-web/src/app/gridElements/grid-poll-option-control/grid-poll-option-control.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-poll-option-control/grid-poll-option-control.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px" style="width:100%; height: 100%;">
   <button color="primary" mat-raised-button (click)="updatePollOption(po)">
-    Refresh
+    Update
   </button>
   <button mat-raised-button (click)="deletePollOption(po)">
     Delete
