--- a/public/slunch-web/src/app/gridElements/grid-confirm-transaction/grid-confirm-transaction.component.html
+++ b/public/slunch-web/src/app/gridElements/grid-confirm-transaction/grid-confirm-transaction.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px" style="width:100%; height: 100%;">
-  <button color="warn" *ngIf="t.status == 'done'" mat-raised-button (click)="updateTransaction(t)">
-    Update
+  <button color="accent" mat-raised-button (click)="confirmTransaction(t)">
+    Confirm
   </button>
 </div>
