--- a/public/slunch-web/src/styles.css
+++ b/public/slunch-web/src/styles.css
@@ -2,6 +2,10 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import 'ag-grid/dist/styles/ag-grid.css';
 @import 'ag-grid/dist/styles/ag-theme-material.css';
+@import 'ag-grid/dist/styles/ag-theme-balham.css';
+@import 'ag-grid/dist/styles/ag-theme-balham-dark.css';
+@import 'ag-grid/dist/styles/ag-theme-bootstrap.css';
+@import 'ag-grid/dist/styles/ag-theme-fresh.css';
 
 body {
   font-family: Roboto, Arial, sans-serif;
