--- a/public/slunch-web/src/app/admin/admin.component.html
+++ b/public/slunch-web/src/app/admin/admin.component.html
@@ -6,7 +6,6 @@
         <mat-expansion-panel-header>
             <mat-panel-title>Unprocessed Transactions</mat-panel-title>
         </mat-expansion-panel-header>
-
         <ag-grid-angular style="height: 500px;" class="ag-theme-material" [gridOptions]="transactionService.unprocessedGO">
         </ag-grid-angular>
 
@@ -21,13 +20,13 @@
 
     <mat-expansion-panel style="margin:3em">
         <mat-expansion-panel-header>
-            <mat-panel-title>Transactions</mat-panel-title>
-            <mat-panel-description>
-                Net today: &nbsp; &nbsp;
-                <span [ngClass]="getTodayPosition()>=0?'green':'red'">
-                    {{getTodayPosition() | currency}}
+          <div style="width:100%" fxLayout="row" fxLayoutAlign="space-between center">
+            <mat-panel-title class="flex-grow-zero">Transactions</mat-panel-title>
+            <mat-panel-description class="flex-grow-zero">
+                Net today: &nbsp;<span [ngClass]="getTodayPosition()>=0?'green':'red'">{{getTodayPosition() | currency}}
                 </span>
             </mat-panel-description>
+          </div>
         </mat-expansion-panel-header>
 
         <ag-grid-angular style="height: 500px" class="ag-theme-material" [gridOptions]="transactionService.allGO">
@@ -39,13 +38,14 @@
 
     <mat-expansion-panel style="margin:3em">
         <mat-expansion-panel-header>
-            <mat-panel-title>User Accounts</mat-panel-title>
-            <mat-panel-description>
-                Total: &nbsp; &nbsp;
-                <span [ngClass]="getTotalBalance()>=0?'green':'red'">
-                    {{getTotalBalance() | currency}}
+          <div style="width:100%" fxLayout="row" fxLayoutAlign="space-between center">
+          <mat-panel-title class="flex-grow-zero">User Accounts</mat-panel-title>
+            <mat-panel-description class="flex-grow-zero">
+                Total: &nbsp;
+                <span [ngClass]="getTotalBalance()>=0?'green':'red'">{{getTotalBalance() | currency}}
                 </span>
             </mat-panel-description>
+          </div>
         </mat-expansion-panel-header>
 
         <ag-grid-angular [gridOptions]="adminService.accountsGO" class="ag-theme-material" style="height: 500px">
