--- a/public/slunch-web/src/styles.css
+++ b/public/slunch-web/src/styles.css
@@ -10,6 +10,8 @@
 body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
+  overflow-x: hidden;
+  width: 100%;
 }
 .clickable {
   cursor: pointer;
