--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -11,19 +11,30 @@
   <!--<mat-icon class="clickable" style="color: white; font-size:200%" (click)="logout()" matTooltip="Sign Out">exit_to_app</mat-icon>-->
   <!--</div>-->
   <button style="color: white; margin-right: 1vw;" mat-button [matMenuTriggerFor]="menu">
-    <span>{{authService.getUsername()}}</span>
+    <span>
+      {{authService.getUsername()}}
+    </span>
+    <span [ngClass]="authService.account?.balance > 0 ? 'lightgreen':'lightred'">
+      {{authService.account?.balance | currency}}
+    </span>
+    <span></span>
     <mat-icon>arrow_drop_down</mat-icon>
   </button>
-  <mat-menu style="align-content: center; display:none; width: 100%" #menu="matMenu" [overlapTrigger]="false"  yPosition="below">
-    <button mat-menu-item  (click)="router.navigate(['account'])">
+  <mat-menu style="align-content: center; display:none; width: 100%" #menu="matMenu" [overlapTrigger]="false" yPosition="below">
+    <button mat-menu-item (click)="router.navigate(['vote'])">
       <span>
-        <mat-icon>person</mat-icon>Account:<span [ngClass]="authService.account?.balance > 0 ? 'green':'red'">
-        {{authService.account?.balance | currency}}</span></span>
+        <mat-icon>how_to_vote</mat-icon>
+        Vote/Order</span>
+    </button>
+    <button mat-menu-item (click)="router.navigate(['account'])">
+      <span>
+        <mat-icon>person</mat-icon>
+        Account
+      </span>
     </button>
     <button mat-menu-item *ngIf="authService.isAdmin" (click)="router.navigate(['admin'])">
-          <span [matBadge]="transactionService.numUnprocessed" matBadgeOverlap="false"
-                [matBadgeColor]="transactionService.numUnprocessed == 0 ? 'primary':'warn'">
-            <mat-icon>settings</mat-icon> Admin</span>
+      <span [matBadge]="transactionService.numUnprocessed" matBadgeOverlap="false" [matBadgeColor]="transactionService.numUnprocessed == 0 ? 'primary':'warn'">
+        <mat-icon>settings</mat-icon> Admin</span>
     </button>
     <button mat-menu-item *ngIf="authService.isAdmin" (click)="router.navigate(['new-poll'])">
       <span>
@@ -31,23 +42,20 @@
         New Poll
       </span>
     </button>
-    <button mat-menu-item (click)="router.navigate(['vote'])">
-      <span>
-        <mat-icon>how_to_vote</mat-icon>
-        Vote/Order</span>
+    <button mat-menu-item *ngIf="authService.isAdmin">
+      <mat-slide-toggle style="width: 100%; height:100%" [(ngModel)]="pollService.allowPoll" (click)="togglePoll()">
+        Show Poll
+      </mat-slide-toggle>
+    </button>
+    <button mat-menu-item *ngIf="authService.isAdmin">
+      <mat-slide-toggle style="width: 100%; height:100%" disabled="{{pollService.getAdminSelectedOptions().length < 1}}" [(ngModel)]="stateService.isOrdering" (click)="toggleOrders()">
+        Allow Orders
+      </mat-slide-toggle>
     </button>
     <button mat-menu-item (click)="logout()" matTooltip="Sign Out">
       <span>
         <mat-icon>exit_to_app</mat-icon>
         Logout</span>
-    </button>
-    <button mat-menu-item *ngIf="authService.isAdmin">
-      <mat-slide-toggle style="width: 100%; height:100%" [(ngModel)]="pollService.allowPoll">Show Poll</mat-slide-toggle>
-    </button>
-    <button mat-menu-item *ngIf="authService.isAdmin">
-      <mat-slide-toggle style="width: 100%; height:100%" disabled="{{pollService.getAdminSelectedOptions().length < 1}}"
-                        [(ngModel)]="stateService.isOrdering">Allow Orders
-      </mat-slide-toggle>
     </button>
   </mat-menu>
 </div>
