--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -11,10 +11,10 @@
   <!--<mat-icon class="clickable" style="color: white; font-size:200%" (click)="logout()" matTooltip="Sign Out">exit_to_app</mat-icon>-->
   <!--</div>-->
   <button style="color: white; margin-right: 1vw;" mat-button [matMenuTriggerFor]="menu">
-    <span>
+    <span style="font-size: 18px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">
       {{authService.getUsername()}}
     </span>
-    <span [ngClass]="authService.account?.balance > 0 ? 'lightgreen':'lightred'">
+    <span style="font-size: 18px;" [ngClass]="authService.account?.balance > 0 ? 'lightgreen':'lightred'">
       {{authService.account?.balance | currency}}
     </span>
     <span></span>
@@ -41,16 +41,6 @@
         <mat-icon>playlist_add</mat-icon>
         New Poll
       </span>
-    </button>
-    <button mat-menu-item *ngIf="authService.isAdmin">
-      <mat-slide-toggle style="width: 100%; height:100%" [disabled]="stateService.isOrdering" [(ngModel)]="pollService.allowPoll" (click)="togglePoll()">
-        Show Poll
-      </mat-slide-toggle>
-    </button>
-    <button mat-menu-item *ngIf="authService.isAdmin">
-      <mat-slide-toggle style="width: 100%; height:100%" [disabled]="!(pollService.getAdminSelectedOptions().length > 0 && pollService.allowPoll)" [(ngModel)]="stateService.isOrdering" (click)="toggleOrders()">
-        Allow Orders
-      </mat-slide-toggle>
     </button>
     <button mat-menu-item (click)="logout()" matTooltip="Sign Out">
       <span>
