--- a/public/slunch-web/src/app/vote-page/vote-page.component.css
+++ b/public/slunch-web/src/app/vote-page/vote-page.component.css
@@ -1,9 +1,11 @@
-.spacer {
-  flex: 1 1 auto;
+
+.admin-control{
+  padding-top:1em;
+  padding-bottom:1em;
+  padding-right:3em;
+  padding-left:3em;
 }
 
-.left-align-tile{
-  position: absolute;
-  left: 3em;
-  top: 5px;
+.admin-control .control + .control{
+  padding-top: 5px;
 }
