--- a/public/slunch-web/src/app/vote-page/vote-page.component.html
+++ b/public/slunch-web/src/app/vote-page/vote-page.component.html
@@ -4,13 +4,13 @@
   <div class="control">
     <mat-slide-toggle style="width: 100%; height:100%" [disabled]="stateService.isOrdering" [(ngModel)]="pollService.allowPoll"
       (click)="togglePoll()">
-      <span style="text-overflow:clip;overflow:hidden">Show Poll</span>
+      Show Poll
     </mat-slide-toggle>
   </div>
   <div class="control">
     <mat-slide-toggle style="width: 100%; height:100%" [disabled]="!(pollService.getAdminSelectedOptions().length > 0 && pollService.allowPoll)"
       [(ngModel)]="stateService.isOrdering" (click)="toggleOrders()">
-      <span>Allow Orders</span>
+      Allow Orders
     </mat-slide-toggle>
   </div>
 
